--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,8 @@ title = "Mark LeBoeuf"
 theme = "hugo-creative-portfolio-theme"
 languageCode = "en-us"
 # Enable comments by entering your Disqus shortname
-disqusShortname = "https-markleboeuf-github-io"
+disqusShortname = "https-markleboeuf-github-io/"
+
 # Enable Google Analytics by entering your tracking code
 googleAnalytics = "UA-101855339-1"
 
@@ -14,7 +15,7 @@ favicon = "favicon.ico"
   # Style options: default (pink), blue, green, pink, red, sea, violet
   # Use custom.css for your custom styling
   style = "red"
-  description = "Code and Stuff"
+  description = "..."
   copyright = "&copy;2017 Mark LeBoeuf"
   sidebarAbout = [
     "I am a Data Scientist currently based in Portland, OR."
