--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,8 @@ title = "Mark LeBoeuf"
 theme = "hugo-creative-portfolio-theme"
 languageCode = "en-us"
 # Enable comments by entering your Disqus shortname
-disqusShortname = "https-markleboeuf-github-io/"
+# disqusShortname = "https-markleboeuf-github-io/"
+
 
 # Enable Google Analytics by entering your tracking code
 googleAnalytics = "UA-101855339-1"
